Add some styles...

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"> <!-- codificacion -->
   <meta name="viewport" content="width=device-width">
   <title>👨‍💻 Portfolio Juan Gonzalez - Estudiante de ingenieria apasionado por el software</title>
-
+  <link rel="stylesheet" href="styles.css">
   <meta name="description" content="Estudiante de ingenieria apasionado por el software">
 
   <!-- OPEN GRAPH -->
