--- a/page-responsive/index.html
+++ b/page-responsive/index.html
@@ -90,5 +90,11 @@
       <h2>Listo para programar?</h2>
       <button>Aplica ya!</button>
     </section>
+
+    <footer>
+      <div class="container">
+        <p>&copy; ProgramaYa 2024 VideoTutorial</p>
+      </div>
+    </footer>
   </body>
 </html>
