fix somethin in HTML file

--- a/page-responsive/index.html
+++ b/page-responsive/index.html
@@ -50,7 +50,7 @@
             neque porro, repellendus nihil. Optio corrupti voluptatem
             consequatur omnis, dolor tempora nihil?
           </p>
-          <button>+</button>
+          <button>+ Info</button>
         </div>
         <div class="card">
           <h3>Programador Back-End</h3>
@@ -60,7 +60,7 @@
             neque porro, repellendus nihil. Optio corrupti voluptatem
             consequatur omnis, dolor tempora nihil?
           </p>
-          <button>+</button>
+          <button>+ Info</button>
         </div>
         <div class="card">
           <h3>Programador Full-Stack</h3>
@@ -70,7 +70,7 @@
             neque porro, repellendus nihil. Optio corrupti voluptatem
             consequatur omnis, dolor tempora nihil?
           </p>
-          <button>+</button>
+          <button>+ Info</button>
         </div>
       </div>
     </section>
