--- a/page-responsive/index.html
+++ b/page-responsive/index.html
@@ -11,9 +11,9 @@
       <div class="container">
         <p class="logo">ProgramaYa!</p>
         <nav>
-          <a href="#">Quienes Somos</a>
-          <a href="#">Nuestros Programas</a>
-          <a href="#">Caracteristicas</a>
+          <a href="#somos-proya">Quienes Somos</a>
+          <a href="#nuestros-programas">Nuestros Programas</a>
+          <a href="#caracteristicas">Caracteristicas</a>
         </nav>
       </div>
     </header>
@@ -29,48 +29,52 @@
     <section id="somos-proya">
       <div class="container">
         <div class="img-container"></div>
-        <h2>Somos ProgramaYa!</h2>
-        <p>
-          Laborum ipsum velit exercitation mollit. Ex adipisicing enim
-          adipisicing dolor ad ad consectetur veniam consequat aliqua
-          exercitation. Consectetur ea deserunt ut officia fugiat ut sit mollit
-          officia. Cupidatat Lorem aliqua dolor consequat.
-        </p>
+        <div class="texto">
+          <h2>Somos <span class="color-acento">ProgramaYa!</span></h2>
+          <p>
+            Laborum ipsum velit exercitation mollit. Ex adipisicing enim
+            adipisicing dolor ad ad consectetur veniam consequat aliqua
+            exercitation. Consectetur ea deserunt ut officia fugiat ut sit
+            mollit officia. Cupidatat Lorem aliqua dolor consequat.
+          </p>
+        </div>
       </div>
     </section>
 
     <section id="nuestros-programas">
       <div class="container">
         <h2>Nuestros Programas</h2>
-        <div class="card">
-          <h3>Programador Front-End</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            voluptas, molestiae ipsum sit commodi autem optio praesentium eius
-            neque porro, repellendus nihil. Optio corrupti voluptatem
-            consequatur omnis, dolor tempora nihil?
-          </p>
-          <button>+ Info</button>
-        </div>
-        <div class="card">
-          <h3>Programador Back-End</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            voluptas, molestiae ipsum sit commodi autem optio praesentium eius
-            neque porro, repellendus nihil. Optio corrupti voluptatem
-            consequatur omnis, dolor tempora nihil?
-          </p>
-          <button>+ Info</button>
-        </div>
-        <div class="card">
-          <h3>Programador Full-Stack</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            voluptas, molestiae ipsum sit commodi autem optio praesentium eius
-            neque porro, repellendus nihil. Optio corrupti voluptatem
-            consequatur omnis, dolor tempora nihil?
-          </p>
-          <button>+ Info</button>
+        <div class="programas">
+          <div class="card">
+            <h3>Programador Front-End</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              voluptas, molestiae ipsum sit commodi autem optio praesentium eius
+              neque porro, repellendus nihil. Optio corrupti voluptatem
+              consequatur omnis, dolor tempora nihil?
+            </p>
+            <button>+ Info</button>
+          </div>
+          <div class="card">
+            <h3>Programador Back-End</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              voluptas, molestiae ipsum sit commodi autem optio praesentium eius
+              neque porro, repellendus nihil. Optio corrupti voluptatem
+              consequatur omnis, dolor tempora nihil?
+            </p>
+            <button>+ Info</button>
+          </div>
+          <div class="card">
+            <h3>Programador Full-Stack</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              voluptas, molestiae ipsum sit commodi autem optio praesentium eius
+              neque porro, repellendus nihil. Optio corrupti voluptatem
+              consequatur omnis, dolor tempora nihil?
+            </p>
+            <button>+ Info</button>
+          </div>
         </div>
       </div>
     </section>
@@ -86,7 +90,7 @@
       </div>
     </section>
 
-    <section id="aplica-ya">
+    <section id="final">
       <h2>Listo para programar?</h2>
       <button>Aplica ya!</button>
     </section>
